blacklist automated loading of the microcode module
We only want the microcode to be automatically updated by the initramfs,
which is known to not trigger kernel bugs in the amd microcode update
kernel drivers.

This is in line with the desired behavior of only updating microcode
*automatically* during system boot, when it is safer to do so.  The
local admin can still load the microcode module and update the microcode
manually at any time, of course.

This is in sync with the intel-microcode packages in Debian jessie,
which will also blacklist the microcode module.

--- a/debian/rules
+++ b/debian/rules
@@ -38,6 +38,9 @@ install:
 	install -m 755 "$(DEBDIR)/initramfs.init-premount" \
 		"$(PKGDIR)/usr/share/initramfs-tools/scripts/init-premount/$(INITRAMFS_NAME)"
 
+	# modprobe.d blacklist
+	install -m 644 "$(DEBDIR)/modprobe-blacklist" "$(PKGDIR)/etc/modprobe.d/$(PACKAGE)-blacklist.conf"
+
 binary: install
 	dh_testdir
 	dh_testroot
