rules: switch to simplified dh-based build (debhelper v9)
Switch to a dh based package build, this allows the package to pick up
newer debhelper functionality easier.

--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 # debian/rules for amd64-microcode
-# Copyright (C) 2012-2014 by Henrique de Moraes Holschuh
+# Copyright (C) 2012-2016 by Henrique de Moraes Holschuh
 # Published under the GNU GPL license version 2 or any later versions
 
 PACKAGE := amd64-microcode
@@ -16,51 +16,18 @@ INITRAMFS_NAME := $(subst -,_,$(subst +,_,$(subst .,_,$(PACKAGE))))
 # For reproducible builds...
 CHANGELOG_TS :=$(shell date -u +%s --date=$(shell dpkg-parsechangelog | sed -n -e "/^Version:/ {s/.*\.\([0-9]\{8\}\)\..*/\1/;p}"))
 
-build-indep:
+%:
+	dh $@
 
-build-arch:
-
-build:
-
-clean:
+override_dh_auto_install:
 	dh_testdir
-	dh_testroot
-	dh_clean
-
-install:
-	dh_testdir
-	dh_testroot
-	dh_prep
-	dh_installdirs
 	dh_install
-
 	mkdir -p "$(PKGDIR)/usr/share/initramfs-tools/hooks"
 	sed -e "s/@CHANGELOG_TS@/$(CHANGELOG_TS)/g" \
 	    <"$(DEBDIR)/initramfs.hook" \
 	    >"$(PKGDIR)/usr/share/initramfs-tools/hooks/$(INITRAMFS_NAME)"
 	chmod 755 "$(PKGDIR)/usr/share/initramfs-tools/hooks/$(INITRAMFS_NAME)"
-
 	# We have a /etc/default file, but no initscript
 	install -m 644 "$(DEBDIR)/$(PACKAGE).default" "$(PKGDIR)/etc/default/$(PACKAGE)"
-
 	# modprobe.d blacklist
 	install -m 644 "$(DEBDIR)/$(PACKAGE).modprobe-blacklist" "$(PKGDIR)/etc/modprobe.d/$(PACKAGE)-blacklist.conf"
-
-binary: install
-	dh_testdir
-	dh_testroot
-	dh_installdocs
-	dh_installchangelogs
-	dh_lintian
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary-indep:
-
-binary-arch: binary
-
-.PHONY: build clean binary install binary-arch binary-indep
